fix some z-index and menu overlay in header

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -124,10 +124,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .header__logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: relative;
-  display: inline-block;
   min-width: 12rem;
   min-height: 3.2rem;
+  z-index: 11;
 }
 
 .header__logo svg {
@@ -171,6 +174,13 @@ h1, h2, h3, h4, h5, h6 {
   opacity: 1;
 }
 
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 1.2rem;
+}
 .navbar .menu-toggle {
   display: none;
 }
@@ -182,9 +192,6 @@ h1, h2, h3, h4, h5, h6 {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  gap: 1rem;
-  width: 10rem;
-  height: 3.7rem;
   z-index: 101;
   position: relative;
 }
@@ -211,7 +218,7 @@ h1, h2, h3, h4, h5, h6 {
   gap: 0;
   position: fixed;
   right: 0;
-  top: 0;
+  top: 6rem;
   left: 0;
   width: 100vw;
   height: 100vh;
@@ -219,7 +226,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 6rem 2rem 2rem 2rem;
   transform: translateX(100%);
   transition: transform 0.4s ease-in-out;
-  z-index: 99;
+  z-index: 10;
 }
 .navbar .menu-overlay .menu-links {
   display: flex;
